# memo-flow

./: .env.example  .ffmpeg-install-progress.json  .gitignore  .whisper-config.json  .whisper-install-progress.json  CLAUDE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  NEXT_STEPS.md  PRD.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  QWEN_API_QUICKSTART.md  README.md  VERCEL_DEPLOY.md  err.logs  jest.config.js  jest.setup.js  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prd.txt  setup-whisper.sh  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: settings.local.json
.claude/plans/: 001-separate-home-and-podcast.md
.trae/rules/: 00-中文回复规则.md
design/: MEMOFLOW_UI.md  ui-mockups.md
desktop/: index.html  vite.config.ts
desktop/scripts/: build-helper-sidecar.cjs
desktop/src/: App.tsx  desktop.css  main.tsx
docs/: BRAND_ANALYSIS.md  BRAND_CHECKLIST.md  BRAND_GUIDE.md  CODE_REVIEW.md  IMPROVEMENT_PLAN.md  NAMING.md  PROGRESS_REPORT.md  ROADMAP.md  apple-podcasts-transcription-plan.md  deployment.md  export-feature-plan.md  product-requirements.md  tasks.md  tech-stack.md  ui-design.md
helper/: server.js
helper/lib/: app-paths.js  config.js  constants.js  cors-sse.js  exec.js  history.js  http-handler.js  state.js  text-utils.js  transcription.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/components/: app-shell.tsx  language-model-settings-panel.tsx  sidebar.tsx  transcription-card.tsx  transcription-detail-tabs.tsx  (+4 more)
(+164 files in other folders)
